# LLM-toolkit

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REPOSITORY_STATE.md  SECURITY.md  ai-toolkit  ai-toolkit.ps1  comfyui-logs.txt  compose  compose.ps1  docker-compose.ollama-expose.yml  docker-compose.openclaw-secure.yml  docker-compose.vllm.yml  docker-compose.yml  ordo  ordo-ai-stack  ordo-ai-stack.ps1  ordo.cmd  ordo.ps1  pyproject.toml  requirements-dev.txt
.claude/: settings.local.json
comfyui-mcp/: Dockerfile  patch_comfyui_client.py
config/: comfyui-manager-seed.ini
dashboard/: Dockerfile  app.py  dependency_registry.json  dependency_registry.py  entrypoint.sh  openclaude_install.py  orchestration_db.py  orchestration_jobs.py  orchestration_readiness.py  param_placeholders.py  requirements.txt  routes_hub.py  routes_openclaude.py  routes_orchestration.py  services_catalog.py  settings.py  workflow_templates.py
docs/: ARCHITECTURE.md  ARCHITECTURE_RFC.md  GETTING_STARTED.md  OPENCLAW_GATEWAY_TOOL_TROUBLESHOOTING.md  OPENCLAW_PERFORMANCE_AUDIT.md  Product Requirements Document.md  STRUCTURE.md  configuration.md  data.md  docker-runtime.md  hermes-agent.md
hermes/: .dockerignore  Dockerfile  entrypoint.sh  ops_client.py  test_ops_client.py
llamacpp/: Dockerfile
mcp/: .env.example  Dockerfile  README.md  gateway-wrapper.sh  registry-custom.yaml  registry.json.example
model-gateway/: Dockerfile  README.md  entrypoint.sh  litellm_config.yaml  main.py
(+194 files in other folders)
